<package>
  <name>staubli_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Staubli manipulators within ROS-Industrial (metapackage).</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://ros.org/wiki/staubli_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>staubli_rx160_gazebo</run_depend>
  <run_depend>staubli_tx90_gazebo</run_depend>
  <run_depend>staubli_tx90_support</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
