<?xml version="1.0"?>
<package format="2">
  <name>staubli_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Staubli manipulators within ROS-Industrial (metapackage).</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://ros.org/wiki/staubli_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>staubli_rx160_gazebo</exec_depend>
  <exec_depend>staubli_tx90_gazebo</exec_depend>
  <exec_depend>staubli_tx90_support</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
