<?xml version="1.0"?>
<package format="2">
  <name>staubli_rx160_gazebo</name>
  <version>0.0.1</version>
  <description>
    <p>
      ROS-Industrial Gazebo support package for the Staubli RX160 (and variants).
    </p>
    <p>
      This package contains the configuration data and launch files required
      to simulate the Staubli RX160 manipulator in Gazebo. This includes the base
      model and the RX160L.
    </p>
    <p>
      Before using any of the configuration files included in this package, be
      sure to check they are correct for the particular robot model and
      configuration you intend to use them with.
    </p>
  </description>
  <author email="murilo.martins@ocado.com">Murilo Martins (Ocado Technology)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/staubli_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>staubli_resources</exec_depend>
  <exec_depend>staubli_rx160_support</exec_depend>
</package>
